@@ -9,7 +9,6 @@ TODO
 
 	* HTML editor
 	* writing comments without having an account
-	* changing :) like strings to images
 
 
 --- ADMIN ---
