@@ -36,7 +36,7 @@
 			</div>
 			<div class="entry_body">
 				<p align="justify">
-					{{ entry.content|safe|linebreaksbr }}
+					{{ entry.content|emotions|safe|linebreaksbr }}
 				</p>
 			</div>
 			<div class="entry_footer">
