@@ -10,7 +10,7 @@
 		{% if messages %}
 		<div class="blog_message">
 			{% for message in messages %}
-				{{ message|safe }}
+				{{ message|emotions|safe }}
 			{% endfor %}
 		</div>
 		{% endif %}
@@ -18,7 +18,7 @@
 		{% if session_messages %}
 			<div class="blog_message">
 			{% for message in session_messages %}
-				{{ message|safe }}
+				{{ message|emotions|safe }}
 			{% endfor %}
 			</div>
 		{% endif %}
@@ -57,7 +57,7 @@
 			</div>
 			<div class="entry_body">
 				<p align="justify">
-					{{ entry.content|safe|linebreaksbr|truncatewords_html:150 }}
+					{{ entry.content|emotions|safe|linebreaksbr|truncatewords_html:150 }}
 					<br><br>
 					<a href="{% url blog_entry entry.datetime.year,entry.datetime|date:"m",entry.datetime|date:"d",entry.slug %}" title="yazının devamını okumak için tıklayın.." class="link">
 						Yazının devamını okumak için tıklayın..
