@@ -25,7 +25,7 @@
 		<div id="body_title">
 			{{ mainpage.content_title|safe }}
 		</div>
-		{{ mainpage.content|safe }}
+		{{ mainpage.content|emotions|safe }}
 		<div id="main_rss_box">
 			<a href="{{ mainpage.rss_url }}" title="gerenk yok ama rss üzerinden okumak isterseniz tıklayın.. :)">
 				<div id="rss_logo"></div>
